K8S/cert-manager/https-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-test
  template:
    metadata:
      labels:
        app: https-test
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: https-test
  namespace: default
spec:
  selector:
    app: https-test
  ports:
    - port: 80
      targetPort: 80
