K8S/cert-manager/https-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-test
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - erp-dev.shopvelmoria.store
      secretName: erpnext-production-tls
  rules:
    - host: erp-dev.shopvelmoria.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: https-test
                port:
                  number: 80
